--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sc-direct-api-js",
+  "name": "ecredit-direct-api",
   "version": "1.0.0",
   "description": "StitchCredit_API",
   "license": "Unlicense",
