--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
-    "prepack": "npm install && npm run build",
+    "prepack": "npm run build",
     "test": "mocha --require @babel/register --recursive"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:StitchCredit/b2c-api-javascript.git"
   },
   "browser": {
     "fs": false
